--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <nav class ="navbar">
         <ul>
             <li><a href="index.html" title="home" class="current">Home</a></li>
-           
+            <li><a href="about.html" title="about">About me</a></li>
+            <li><a href="project.html" title="project">Projects</a></li>
+            <li><a href="contact.html" title="contact">Contact Me</a></li>
         </ul>
     </nav>  
 </body>
