--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class ="navbar">
+  <div class ="navbar">
+     <nav> 
         <ul>
             <li><a href="index.html" title="home" class="current">Home</a></li>
             <li><a href="about.html" title="about">About me</a></li>
             <li><a href="project.html" title="project">Projects</a></li>
-            <li><a href="contact.html" title="contact">Contact Me</a></li>
+            <li><a href="#" title="contact">Contact Me</a></li>
         </ul>
-    </nav>  
+     </nav>
+
+        <div class="name">
+            
+          <h1 >Mary Kamau</h1>
+        </div>
+    
+  </div>   
 </body>
 </html>
