--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>A fullstack software developer</p>
 
 
-       <!--  </div>
+        </div>
         <div class="footer">
             <div id="social">
     
@@ -40,7 +40,7 @@
             <p><strong>Mary kamau</strong></p>
             <p>&copy; <strong>copyright reserved @2021</p>
             </strong>
-        </div> -->
+        </div>
      
     </div>   
 </body>
