--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="about">
+<!-- <body class="about">
 
     <div class="container">
         <nav>
@@ -64,7 +64,7 @@
                   second thing I love about programming is that, it build your problem solving skill which increases your creativity, and when you become more creative for a thing, you explore it, you love it, and you dream about it.
                 </p>
            </div>    
-
+ -->
         <div class="footer">
             <p>&copy; <strong>copyright reserved @2021</p>
             </strong>
@@ -82,4 +82,4 @@
     </div>
     
 </body>
-</html> -->
+</html> 
