--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<!-- <body class="about">
+ <body class="about">
 
     <div class="container">
         <nav>
@@ -40,7 +40,7 @@
                         </p>
                 
                 </div>
-            <div class="Education">
+           <!--  <div class="Education">
                     <h2>Education Background</h2>
                     <p><li> Google Africa Developer</li> March 2020-November 2020 <h4>Mobile web specialist</h4></p>
                     <p><li>Modcom Institute Of Technology</li> October 2019-November 2019 <h4>Data Science</h4></p>
@@ -64,7 +64,7 @@
                   second thing I love about programming is that, it build your problem solving skill which increases your creativity, and when you become more creative for a thing, you explore it, you love it, and you dream about it.
                 </p>
            </div>    
- -->
+  -->
         <div class="footer">
             <p>&copy; <strong>copyright reserved @2021</p>
             </strong>
