--- a/about.html
+++ b/about.html
@@ -54,11 +54,11 @@
                 <p><li>Kenyatta National Hospital</li> January 2020-November 2020 <h4>IT Support Specialist</h4></p>
                 
           </div>
-          <!--  <div class="Hobbies">
+            <div class="Hobbies">
               <h2>My Hobbies</h2>
                <p>I love listenining to music and exploring our beautiful nature generally am a dendrophile.While am free i love visiting Children Homes.</p>
            </div>
-           <div class="programming">
+          <!--  <div class="programming">
               <h2>Why programming</h2>
               <p> I love programming because of it's endless applications, you wish for something and programming can made it possible if you have enough resources and skill, 
                   second thing I love about programming is that, it build your problem solving skill which increases your creativity, and when you become more creative for a thing, you explore it, you love it, and you dream about it.
