Added the footer section

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
     <title>Contact us</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="project">
+<!-- <body class="project">
 
     <div class="container">
         <nav>
@@ -29,7 +29,7 @@
                 <textarea class="contact-form-text" placeholder="Your message"></textarea> 
                 <input type="submit" class="contact-form-btn" value="Send"> 
             </form>
-        </div>
+        </div> -->
         
         <div class="footer">
             <p>&copy; <strong>copyright reserved @2021</p>
@@ -47,4 +47,4 @@
         </div>
     </div>
 </body>
-</html> -->
+</html> 
