Added the footer

--- a/project.html
+++ b/project.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
     <title>project</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="project">
+<!-- <body class="project">
 
     <div class="container">
         <nav>
@@ -79,7 +79,7 @@
                     </p>
     
                 </div>
-            </div>    
+            </div>     -->
 
         <div class="footer">
             <p>&copy; <strong>copyright reserved @2021</p>
@@ -98,4 +98,4 @@
          
     </div>
 </body>
-</html> -->
+</html> 
