Added the images of the projects

--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
     <title>project</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<!-- <body class="project">
+<body class="project">
 
     <div class="container">
         <nav>
@@ -38,7 +38,7 @@
                     </p>
                     
                 </div>
-                <div class="spacing">
+               <!--  <div class="spacing">
                     <img src="./images/brand.png" height="300" width="250" alt=" brand photo">
                     <p>
                         <a href="https://robert-moringa.github.io/Kreative-Brands/"><strong>Kleative brand</strong></a>:<em>See more.</em><br><br>
@@ -79,7 +79,7 @@
                     </p>
     
                 </div>
-            </div>     -->
+            </div>      -->
 
         <div class="footer">
             <p>&copy; <strong>copyright reserved @2021</p>
