--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <li><a href="contact.html" title="contact" class="current">Contact Me</a></li>
             </ul>
         </nav>
-        <div class="contact-section">
+       <!--  <div class="contact-section">
             <h1>CONTACT ME</h1>
             <form class="contact-form" action="index.html" method="post">
                 <input type="text" class="contact-form-text" placeholder="Your name">
@@ -29,7 +29,7 @@
                 <textarea class="contact-form-text" placeholder="Your message"></textarea> 
                 <input type="submit" class="contact-form-btn" value="Send"> 
             </form>
-        </div> 
+        </div>  -->
         
         <div class="footer">
             <p>&copy; <strong>copyright reserved @2021</p>
