--- a/project.html
+++ b/project.html
@@ -14,11 +14,11 @@
      <div class="container">
         <nav>
             <ul>
-               <!--  <li><a href="index.html" title="home">Home</a></li></li>
+                 <li><a href="index.html" title="home">Home</a></li></li>
                 <li><a href="about.html" title="about">About me</a></li>
                 <li><a href="project.html" title="project"class="current">Projects</a></li>
                 <li><a href="contact.html" title="contact">Contact Me</a></li>
-            </ul>  -->
+            </ul>  
         </nav>
         <div class="projects">
             <h1>MY PROJECTS</h1><hr>
