Added a padding to the submit button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="content">
             
             
-            <p><b>A fullstack software developer</b></p>
+            <p><b> software developer</b></p>
             <input type="submit" class="contact-form-btn" value="Get in touch">
 
 
